fixed admin dashboard collection modal z-index, modal now disables scroll on open

--- a/src/components/Admin/Dashboard/CollectionModal.module.scss
+++ b/src/components/Admin/Dashboard/CollectionModal.module.scss
@@ -4,11 +4,13 @@
   right: 0px;
   bottom: 0px;
   left: 0px;
+  z-index: 2;
   background: rgba(black, 0.7);
 }
 .modal {
+  z-index: 3;
   background-color: var(--background-base-color);
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
